syntax = "proto3";

package api.v1.app.room;

import "api/v1/access_control.proto";
import "google/api/annotations.proto";

service RoomService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse) {
    option (google.api.http) = {post: "/api/v1/app/room"};
    option (api.v1.access_control) = {require: "room:create"};
  }
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse) {
    option (google.api.http) = {get: "/api/v1/app/room/{room_id}"};
    option (api.v1.access_control) = {require: "room:get"};
  }
}

message CreateRoomRequest {
  string display_name = 1;
}
message CreateRoomResponse {
  string room_id = 1;
  string display_name = 2;
}
message GetRoomRequest {
  string room_id = 1;
}
message GetRoomResponse {
  string room_id = 1;
  string display_name = 2;
}
